test(examples): add wait and handler error test examples
- Add testing examples
  - wait for condition
  - handler error

- Update wait example with Duration change
- Update web runner and workflow, only warning on error response so that we can test on funciton exception

--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -158,10 +158,9 @@ jobs:
         # Check for function errors
         FUNCTION_ERROR=$(jq -r '.FunctionError // empty' /tmp/invoke_response.json)
         if [ -n "$FUNCTION_ERROR" ]; then
-          echo "ERROR: Lambda function failed with error: $FUNCTION_ERROR"
+          echo "Warning: Lambda function failed with error: $FUNCTION_ERROR"
           echo "Function response:"
           cat /tmp/response.json
-          exit 1
         fi
         
         # Extract invocation ID from response headers
