examples: Add wait_for_callback examples
- Wait for callback examples
- Add a helper method in the runner to get all nested operations
- Update sam template

--- a/examples/template.yaml
+++ b/examples/template.yaml
@@ -142,6 +142,132 @@ Resources:
       DurableConfig:
         RetentionPeriodInDays: 7
         ExecutionTimeout: 300
+  WaitForCallbackAnonymous:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_anonymous.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  WaitForCallbackHeartbeat:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_heartbeat.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  WaitForCallbackChild:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_child.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  WaitForCallbackMixedOps:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_mixed_ops.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  WaitForCallbackMultipleInvocations:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_multiple_invocations.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  WaitForCallbackSubmitterFailureCatchable:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_submitter_failure_catchable.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  WaitForCallbackSubmitterFailure:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_submitter_failure.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  WaitForCallbackSerdes:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_serdes.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
+  WaitForCallbackNested:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: build/
+      Handler: wait_for_callback_nested.handler
+      Description: Usage of context.wait_for_callback() to wait for external system
+        responses
+      Role:
+        Fn::GetAtt:
+        - DurableFunctionRole
+        - Arn
+      DurableConfig:
+        RetentionPeriodInDays: 7
+        ExecutionTimeout: 300
   RunInChildContext:
     Type: AWS::Serverless::Function
     Properties:
