fix: checkout testing sdk repo too

--- a/.github/workflows/create-emulator-pr.yml
+++ b/.github/workflows/create-emulator-pr.yml
@@ -30,6 +30,11 @@ jobs:
     if: github.event.action == 'opened' || github.event.action == 'synchronize'
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout testing SDK repo
+      uses: actions/checkout@v5
+      with:
+        path: testing-sdk
+        
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
@@ -70,12 +75,8 @@ jobs:
         fi
         
         # Update pyproject.toml to use local testing SDK (temporary, not committed)
-        echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-        echo "Current directory: $(pwd)"
-        echo "Parent directory contents:"
-        ls -la ../
-        TESTING_SDK_PATH="../aws-durable-execution-sdk-python-testing"
-        sed -i.bak "s|aws-durable-execution-sdk-python-testing @ git+ssh://git@github.com/aws/aws-durable-execution-sdk-python-testing.git|aws-durable-execution-sdk-python-testing @ file://$PWD/${TESTING_SDK_PATH}|" pyproject.toml
+        TESTING_SDK_PATH="$(realpath ../testing-sdk)"
+        sed -i.bak "s|aws-durable-execution-sdk-python-testing @ git+ssh://git@github.com/aws/aws-durable-execution-sdk-python-testing.git|aws-durable-execution-sdk-python-testing @ file://${TESTING_SDK_PATH}|" pyproject.toml
         rm pyproject.toml.bak
         
         # Generate new uv.lock with the specific testing SDK commit
