--- a/.github/workflows/create-emulator-pr.yml
+++ b/.github/workflows/create-emulator-pr.yml
@@ -98,6 +98,7 @@ jobs:
     - name: Create or update PR in emulator repo
       uses: actions/github-script@v7
       with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const fs = require('fs');
           const pr = context.payload.pull_request;
@@ -173,5 +174,7 @@ jobs:
             
           } catch (error) {
             console.log(`Error managing PR: ${error.message}`);
+            console.log(`Error status: ${error.status}`);
+            console.log(`Error response: ${JSON.stringify(error.response?.data)}`);
             core.setFailed(`Failed to manage emulator PR: ${error.message}`);
           }
