--- a/.github/workflows/create-emulator-pr.yml
+++ b/.github/workflows/create-emulator-pr.yml
@@ -7,6 +7,8 @@ on:
 
 permissions:
   contents: read
+  pull-requests: write
+  issues: write
 
 jobs:
   cleanup-emulator-pr:
@@ -98,7 +100,7 @@ jobs:
     - name: Create or update PR in emulator repo
       uses: actions/github-script@v7
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.EMULATOR_REPO_TOKEN }}
         script: |
           const fs = require('fs');
           const pr = context.payload.pull_request;
