--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "aws-durable-execution-sdk-python-testing"
 dynamic = ["version"]
-description = 'This is the Python SDK for AWS Lambda Durable Execution.'
+description = 'AWS Durable Execution Testing SDK for Python'
 readme = "README.md"
 requires-python = ">=3.11"
 license = "Apache-2.0"
